--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </li>
     <li>
       <h2>Yosemite</h2>
-      <p>One can alwaus find peace and tranquility in Yosemite National Park. The scenery is breathtaking, and there is plenty to do. I would love to hike Half Dome someday.</p>
+      <p>One can always find peace and tranquility in Yosemite National Park. The scenery is breathtaking, and there is plenty to do. I would love to hike Half Dome someday.</p>
     </li>
     <li>
       <h2>Bucket List</h2>
